Refactored into Game object. New game is started when reaching the the winning location.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
       <button class="roll-dice">
         Roll The Dice!
       </button>
+      <p>Roll Count: <span class="roll-count">0</span></p>
+      <h3>Power-ups:</h3>
+      <ul class="power-ups-list">
+
+      </ul>
     </div>
     <div class="game-board">
       <div class="board-row">
