Added basic powerup functionality

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       <ul class="power-ups-list">
 
       </ul>
+      <h3>Using:</h3>
+      <ul class="power-ups-using">
+
+      </ul>
     </div>
     <div class="game-board">
       <div class="board-row">
