Added notifications when finding powerups, traps or winning. Added button to quit current game and start a new one.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <![endif]-->
   <div class="page-cont">
     <div class="game-header">
+
       <div class="dice-container">
+        <button class="start-new">New Game</button>
         <div>
           Vertical Roll: <span class="dice"></span>
         </div>
@@ -52,6 +54,9 @@
     <button class="roll-dice">
       Roll The Dice!
     </button>
+    <div class="notification-div">
+      <p class="game-notification"></p>
+    </div>
     <div class="game-board">
       <div class="board-row">
         <div class="board-square"></div>
